--- a/TVSeriesApp/ClientApp/package.json
+++ b/TVSeriesApp/ClientApp/package.json
@@ -8,11 +8,11 @@
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.3",
-    "node-sass": "^4.12.0",
+    "node-sass": "6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "typescript": "3.4.5",
     "whatwg-fetch": "^3.0.0"
   },
