--- a/TVSeriesApp/ClientApp/package.json
+++ b/TVSeriesApp/ClientApp/package.json
@@ -2,6 +2,7 @@
   "name": "tv-series-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:61237/",
   "dependencies": {
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
