--- a/TVSeriesApp/ClientApp/package.json
+++ b/TVSeriesApp/ClientApp/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "proxy": "http://localhost:61237/",
   "dependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.2.3",
-    "@types/react-router-dom": "^5.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
-    "react-scripts": "^5.0.1",
+    "@types/jest": "29.5.1",
+    "@types/node": "20.2.3",
+    "@types/react-router-dom": "5.3.3",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.11.2",
+    "react-scripts": "5.0.1",
     "typescript": "^5.0.4",
-    "whatwg-fetch": "^3.6.2"
+    "whatwg-fetch": "3.6.2"
+  },
+  "overrides": {
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,23 +42,23 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "cross-env": "^7.0.3",
-    "eslint-config-airbnb": "^19.0.4",
+    "@typescript-eslint/parser": "5.59.7",
+    "cross-env": "7.0.3",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.8",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.3.0",
-    "typescript-eslint-parser": "^22.0.0",
-    "webpack": "^5.83.1"
+    "eslint-config-react": "1.1.7",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "2.8.8",
+    "sass": "1.62.1",
+    "sass-loader": "13.3.0",
+    "typescript-eslint-parser": "22.0.0",
+    "webpack": "5.83.1"
   }
 }
