--- a/TVSeriesApp/ClientApp/package.json
+++ b/TVSeriesApp/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:61237/",
   "dependencies": {
+    "@babel/types": "^7.21.5",
     "@types/jest": "29.5.1",
     "@types/node": "20.2.3",
     "@types/react-router-dom": "5.3.3",
