SQL Server connected to Favourites DB

--- a/TVSeriesApp/appsettings.json
+++ b/TVSeriesApp/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLiteConnection": "Data Source= ./db/movies.db",
+    "MSSQLConnection": "Server=(local);Database=favouritesdb;Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
